# rrythm

./: Cargo.toml  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
crates/cli/src/commands/: server.rs
crates/http/: Cargo.toml
crates/http/src/: error.rs  lib.rs
flake-parts/: cargo.nix
